<resources>
    <string name="app_name">ACEH</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Home -->
    <string name="home_food_button">Find a Free Food Pantry Today in Anchorage</string>
    <string name="home_211_button">211</string>
    <string name="home_Entry_button">Coordinated Entry</string>
    <string name="home_shelter_button">Find A shelter</string>

    <!-- Home.211 -->
    <string name="home_211_information">What is call 2-1-1? \n \nThe 2-1-1 hotline helps residents access shelter, health care, food, and other social services.</string>
    <string name="home_211_time">Monday – Friday 8:30 a.m. – 5:30 p.m.</string>
    <string name="home_211_link">More information: https://alaska211.org/</string>
    <string name="home_211_call_now_button">Call Now</string>

    <!-- Home.CoordinatedEntry  -->
    <string name="home_Entry_title">What is Coordinated Entry</string>
    <string name="home_Entry_time">Monday – Friday 8:30 a.m. – 5:30 p.m.</string>
    <string name="home_Entry_link">More information: https://aceh.org/our-work/coordinated-entry/</string>
    <string name="home_Entry_call">Call Now</string>

    <!-- Home.Shelter -->
    <string name="home_Shelter_Sullivan_Arena_Warming_Area">Sullivan Arena Warming Area</string>
    <string name="home_Shelter_McKinnel_House">SA: McKinnel House</string>
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter">Gospel Rescue Mission Shelter</string>
    <string name="home_Shelter_Downtown_Hope_Center">Downtown Hope Center</string>
    <string name="home_Shelter_Complex_Care_Shelter">Complex Care Shelter</string>
    <string name="home_Shelter_Clare_House">Clare House</string>
    <string name="home_Shelter_Brother_Francis_Shelter">Brother Francis Shelter</string>
    <string name="home_Shelter_Sullivan">Sullivan</string>
    <string name="home_Shelter_MACK_House">MACK House</string>
    <string name="home_Shelter_AVITOR">AVITOR</string>
    <string name="home_Shelter_AWAIC">SHome: AWAIC</string>

    <!-- Home.Shelter.Sullivan_Arena_Warming_Area -->
    <string name="home_Shelter_Sullivan_Arena_Warming_Area_title">Sullivan Arena Warming Area</string>
    <string name="home_Shelter_Sullivan_Arena_Warming_Area_location">1600 Gambell St., Anchorage, AK 99501</string>
    <string name="home_Shelter_Sullivan_Arena_Warming_Area_phone">(907) 279-0618</string>
    <string name="home_Shelter_Sullivan_Arena_Warming_Area_time">Open 24/7</string>
    <string name="home_Shelter_Sullivan_Arena_Warming_Area_information">Open for anyone who needs protection from the cold weather. Has microwave, hot water and bathrooms.</string>
    <string name="home_Shelter_Sullivan_Arena_Warming_Area_button">More Information</string>

    <!-- Home.Shelter.Mickinnel_House -->
    <string name="home_Shelter_Mickinnel_House_title">McKinnell House</string>
    <string name="home_Mickinnel_House_location">1712 A Street, Anchorage, Alaska 99501</string>
    <string name="home_Shelter_Mickinnel_House_phone">(800) 725-2769</string>
    <string name="home_Shelter_Mickinnel_House_time">Family Services Food Pantry: 1:30 PM - 4:30 PM, Tuesday - Friday \n McKinnell House Desk Hours: 8:00 AM - 5:00 PM, Monday - Friday</string>
    <string name="home_Shelter_Mickinnel_House_information">Offers 24 hours lodging, meals, life skills development, and other services</string>
    <string name="home_Shelter_Mickinnel_House_button">Go To Website</string>

    <!-- Home.Shelter.Gospel Rescue Mission Shelter -->
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter_title">Gospel Rescue Mission Shelter</string>
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter_location">2823 E Tudor Rd, Anchorage, AK 99507</string>
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter_phone">(907)-563-5603</string>
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter_time">Monday – Sunday 6 a.m. – 11 a.m./4 p.m - 6 p.m</string>
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter_information">Full shelter program. Length of stay extended to 90 days for current guests and future referrals to assist with current needs. LifeSkills Program may be available, application required. Serving dinner 4:30-6pm nightly, serves breakfast on weekdays from 6-7:15 a.m. and brunch on Sat and Sun. from 10-11 a.m. (Open to non-guests – sober.)</string>
    <string name="home_Shelter_Gospel_Rescue_Mission_Shelter_button">Go To Website</string>

    <!-- Home.Shelter.Downtown_Hope_Center -->
    <string name="home_Shelter_Downtown_Hope_Center_title">Downtown Hope Center</string>
    <string name="home_Shelter_Downtown_Hope_Center_location">240 East 3rd Avenue Anchorage, AK 99501</string>
    <string name="home_Shelter_Downtown_Hope_Center_phone">(907)-277-4302</string>
    <string name="home_Shelter_Downtown_Hope_Center_time">Monday – Friday 8 a.m. – 7 p.m.</string>
    <string name="home_Shelter_Downtown_Hope_Center_information">8pm curfew for guests that have been checked in previously. Admitting new guests into the shelter after curfew if beds are available.</string>
    <string name="home_Shelter_Downtown_Hope_Center_button">Go To Website</string>

    <!-- Home.Shelter.Complex Care Shelter -->
    <string name="home_Shelter_Complex_Care_Shelter_title">Complex Care Shelter</string>
    <string name="home_Shelter_Complex_Care_Shelter_location">303 West Fireweed Lane in Anchorage, Alaska</string>
    <string name="home_Shelter_Complex_Care_Shelter_phone">(907)-764-1371</string>
    <string name="home_Shelter_Complex_Care_Shelter_time">By appointment</string>
    <string name="home_Shelter_Complex_Care_Shelter_information">Located at 303 West Fireweed Lane in Anchorage, Alaska, the Complex Care facility can serve up to 83 guests at any one time. It provides a private, stable place for guests to stay while they complete assessments and are connected to benefits and resources to support their path toward permanent housing</string>
    <string name="home_Shelter_Complex_Care_Shelter_button">Go to website</string>

    <!-- Home.Shelter.ClareHouse -->
    <string name="home_Shelter_ClareHouse_title">CSS: Clare House</string>
    <string name="home_Shelter_ClareHouse_location">4110 Spenard Road, Anchorage, AK 99517</string>
    <string name="home_Shelter_ClareHouse_phone">(907) 563-4545</string>
    <string name="home_Shelter_ClareHouse_time">Open 24 hours</string>
    <string name="home_Shelter_ClareHouse_information">Clare House offers emergency shelter and case management services to homeless mothers and children, helping them achieve permanent stability.</string>
    <string name="home_Shelter_ClareHouse_button">Go to WEBSITE</string>

    <!-- Home.Shelter.BrotherFrancis -->
    <string name="home_Shelter_CBrother_Francis_title">CSS: Brother Francis Shelter</string>
    <string name="home_Shelter_CBrother_Francis_location">1021 E 3rd Avenue, Anchorage, Alaska 99501</string>
    <string name="home_Shelter_CBrother_Francis_phone">(907) 277-1731</string>
    <string name="home_Shelter_CBrother_Francis_time">Open 24 hours</string>
    <string name="home_Shelter_CBrother_Francis_information">Brother Francis Shelter in Anchorage provides emergency shelter and supportive programs for homeless individuals with a focus on achieving permanent stability</string>
    <string name="home_Shelter_CBrother_Francis_button">Go to WEBSITE</string>

    <!-- Home.Shelter.Sullivanr -->
    <string name="home_Shelter_Sullivan_title">Sullivan Arena</string>
    <string name="home_Shelter_Sullivan_location">1600 Gambell St., Anchorage, AK 99501</string>
    <string name="home_Shelter_Sullivan_phone">(907) 279-0618</string>
    <string name="home_Shelter_Sullivan_time">Monday – Friday 12:00 noon – 4:00 p.m.</string>
    <string name="home_Shelter_Sullivan_information">Congregate Emergency Shelter. All beds occupied</string>
    <string name="home_Shelter_Sullivan_button">More Information</string>

    <!-- Home.Shelter.MACK_House -->
    <string name="home_Shelter_MACK_House_title">CH: MACK House</string>
    <string name="home_Shelter_MACK_House_location">755 A Street, Anchorage, AK 99501</string>
    <string name="home_Shelter_MACK_House_phone">(907)-272-1255</string>
    <string name="home_Shelter_MACK_House_time">Monday – Friday 8:30 a.m. – 5:30 p.m.</string>
    <string name="home_Shelter_MACK_House_information">Covenant House Alaska is the largest provider of services to homeless and runaway youth in the state of Alaska. The goal of our services is to move a youth from homelessness to stability</string>
    <string name="home_Shelter_MACK_House_button">Go to WEBSITE</string>

    <!-- Home.Shelter.Avitor -->
    <string name="home_Shelter_Avitor_title">AVITOR</string>
    <string name="home_Shelter_Avitor_location">5011 Spenard Rd., Suite 205, Anchorage, AK 99517</string>
    <string name="home_Shelter_Avitor_phone">(907)-245-4359</string>
    <string name="home_Shelter_Avitor_time">Monday – Friday 8:30 a.m. – 5:30 p.m.</string>
    <string name="home_Shelter_Avitor_information">To receive more information, please press the button down below</string>
    <string name="home_Shelter_Avitor_button">More Information</string>

    <!-- Home.Shelter.AWAIC -->
    <string name="home_Shelter_AWAIC_title">AWAIC</string>
    <string name="home_Shelter_AWAIC_location">100 W 13th Ave, Anchorage, AK 99501</string>
    <string name="home_Shelter_AWAIC_phone">(907) 279-9581</string>
    <string name="home_Shelter_AWAIC_time">Monday – Friday 8:30 a.m. – 5:30 p.m.</string>
    <string name="home_Shelter_AWAIC_information">AWAIC’s mission is to provide domestic violence safe shelter, intervention, and prevention. Our core values are advocacy, compassion, dignity, and collaboration</string>
    <string name="home_Shelter_AWAIC_button">Go to WEBSITE</string>


    <!-- Transportation -->
    <string name="home_transpo_intro">How to ride People Mover?</string>
    <string name="home_transpo_information">・Half Fare eligibility includes Seniors age 60 or over, Youth ages 5-18, Veterans, Medicare Card Holders, AnchorRIDES Paratransit eligibility, and individuals with a qualifying disability.
    \n ・For those with a disability which affects their ability to ride the bus, a People Mover Half Fare ID Card must be obtained.
    \n ・Proof of eligibility is required at each boarding.
    \n ・Children age 4 and under ride free with a fare paying adult.
    \n ・Fares may be purchased on the bus.
    </string>
    <string name="home_price">Adults: Cash|$2.00 ; Day Pass|$5.00</string>

    <!-- Others -->
    <string name="home_others_intro">Career Development</string>
    <string name="home_others_information">Employers and recruiters congregate in one location to provide you with information and the chance to work for their prestigious organization. Also, you have free access to a network and make relationships with businesses and job seekers. Find out about job fairs in your area if you are seeking employment prospects.
    \n ・Free career and life skills trainings.
    \n ・Job fairs near you.
    \n ・Recruitment events.
    \n ・Other helpful seminars/webinars.
    </string>
</resources>