<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.Shelter.AwaicActivity">

    <ImageView
        android:id="@+id/Library_ImageView"
        android:layout_width="330dp"
        android:layout_height="210dp"
        android:src="@drawable/picture11_1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="Courtesy of https://www.google.com/maps"
        android:textColor="#000000"
        android:textSize="9sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_Awaic"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/home_Shelter_AWAIC_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_Awaic_address"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:drawableLeft="@drawable/icon_map"
        android:gravity="center"
        android:text="@string/home_Shelter_AWAIC_location"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView_Awaic_phone"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:drawableLeft="@drawable/icon_phone"
        android:gravity="center"
        android:text="@string/home_Shelter_AWAIC_phone"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_Awaic_time"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:drawableLeft="@drawable/icon_time"
        android:gravity="center"
        android:text="@string/home_Shelter_AWAIC_time"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_Awaic_information"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:drawableLeft="@drawable/exclamation_icon_shelter"
        android:gravity="center"
        android:text="@string/home_Shelter_AWAIC_information"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Link_Awaic"
        android:layout_width="316dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:background="@drawable/home_button_shape"
        android:text="@string/home_Shelter_AWAIC_button"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>