<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map.List.TransporationListActivity">

    <TextView
        android:id="@+id/textView_transporation_title"
        android:layout_width="337dp"
        android:layout_height="27dp"
        android:text="@string/home_transpo_intro"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_transporation_info"
        android:layout_width="359dp"
        android:layout_height="371dp"
        android:text="@string/home_transpo_information"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <TextView
        android:id="@+id/textView_timeicon"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:drawableLeft="@drawable/icon_dollar_sign"
        android:gravity="center"
        android:text="@string/home_price"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_learn_more"
        android:layout_width="328dp"
        android:layout_height="104dp"
        android:background="#EB921A"
        android:text="Learn More"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>